Fixed spacing

--- a/projects/figma-to-code/css/templates/modules/feature-list.css
+++ b/projects/figma-to-code/css/templates/modules/feature-list.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	margin-top: var(--space-xlarge);
+	gap: var(--space-small);
 }
 
 feature-card {
